<resources>


    <string name="add_jobs">Make A Job</string>

    <string name="your_posted_jobs">Your posted jobs</string>



    <string name="app_name">EasyNurse</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create new account</string>
    <string name="banner_subtitle">Hire nurses and care-givers</string>
    <string name="new_account_prompt">Don\'t have an account?</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="btn_register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="radiobutton_male">Male</string>
    <string name="radiobutton_female">Female</string>
    <string name="radiobutton_other">Other</string>
    <string name="register_terms">* By registering you agree to our terms and conditions.</string>
    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_account_type">Select your account type</string>
    <string name="patient">Patient</string>
    <string name="nurse">Nurse</string>
    <string name="account_type_info">* You may select either patient or nurse type account.</string>

</resources>