<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EasyNurse"
        android:textSize="55sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/primary700"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/banner_description" />

    <TextView
        android:id="@+id/banner_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_subtitle"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_register_name" />

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_register_email"
        app:layout_constraintTop_toBottomOf="@id/banner_description"/>


    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_name" />

    <EditText
        android:id="@+id/et_register_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_email"
        />

    <EditText
        android:id="@+id/et_register_dob"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/dob"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_pass"
        />

    <EditText
        android:id="@+id/et_register_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_baseline_phone_enabled_24"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_dob"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/register_gender_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_phone">

        <TextView
            android:id="@+id/register_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/gender"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            />

        <RadioGroup
            android:id="@+id/register_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_register_male"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/radiobutton_male"
                />

            <RadioButton
                android:id="@+id/rb_register_female"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/radiobutton_female"
                />

            <RadioButton
                android:id="@+id/rb_register_other"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/radiobutton_other"
                />
        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/tv_register_terms"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register_terms"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/register_gender_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/btn_register"
        android:textSize="18sp"
        android:backgroundTint="@color/primary700"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_terms"
        app:layout_constraintBottom_toTopOf="@id/tv_has_account"/>


    <TextView
        android:id="@+id/tv_has_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_goto_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/btn_login"
        android:letterSpacing="0.025"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/primary700"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_has_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>