<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragmentAccountTypeSelection"
    android:background="@color/primary700">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_constraint_layout_account_type_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:background="@color/primary700">


        <TextView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="55sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/banner_description" />

        <TextView
            android:id="@+id/banner_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_subtitle"
            android:textColor="@color/lightGrey"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_select_account_type" />


        <TextView
            android:id="@+id/tv_select_account_type"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/select_account_type"
            android:layout_marginTop="85dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/banner_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btn_type_patient"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/patient"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/primary700"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select_account_type"
            app:layout_constraintBottom_toTopOf="@id/btn_type_nurse"/>

        <Button
            android:id="@+id/btn_type_nurse"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/nurse"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/primary700"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_type_patient" />

        <TextView
            android:id="@+id/tv_account_type_info"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/account_type_info"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btn_type_nurse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_has_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_account_type_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_goto_login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/btn_login"
            android:letterSpacing="0.025"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/primary700"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_has_account" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/pb_select_account_type"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:ignore="MissingConstraints"
            android:elevation="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>